# ibb_basics_p1

./: CMakeLists.txt  html_template2.html  html_template2.js  html_template2.wasm  main.cpp
app/: App.cpp  App.h  ConsoleUtility.cpp  ConsoleUtility.h  ExecuteApp.cpp  ExecuteApp.h
cite_service/: CiteService.cpp  CiteService.h
database/: BookRepository.cpp  BookRepository.h  CiteStyleRepository.cpp  CiteStyleRepository.h
docs/: Todo.md
domain/: Book.cpp  Book.h  CiteStyle.cpp  CiteStyle.h
